Tue Jan  7 21:34:56 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c src/odbc/odbc.c:
	- do not compiler ODBC3 code if not ODBC3
	- fix some error in SQLTables (missing parameters and quoting)

Tue Jan  7 20:53:38 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix some issue with SQLGetFunctions

Tue Jan  7 15:41:24 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c:
	- avoid free(NULL)
	* src/odbc/odbc.c:
	- rewrite function checking using some macro
	* win32/msvc6/FreeTDS.dsp:
	- add error.c

Tue Jan  7 11:25:00 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/common.c: small fix
	* src/odbc/unittests/print.c: finished

Mon Jan  6 22:41:37 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c:
	- fix error in SQLGetDiagRec not returning correct errors
	- add SQLGetDiagField
	* src/odbc/odbc.c:
	- enable SQLGetDiagField and SQLGetDiagRec
	* src/odbc/unittests/Makefile.am src/odbc/unittests/print.c(added):
	- add print test (unfinished)
	* src/odbc/unittests/common.c:
	- do not print garbage error

Mon Jan  6 15:14:24 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/token.c added token name to marker value in log

Sun Jan  5 16:48:41 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: cleanup
	* src/odbc/odbc.c: do not set database (now useless)
	* src/odbc/unittests/t0001.c src/odbc/unittests/t0002.c:
	* src/odbc/unittests/t0003.c:
	- do not reset TDSDUMP environment
	* src/tds/login.c: set database during login if specified
	* src/tds/token.c: update docs on tds_process_simple_query

Sun Jan  5 15:27:40 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: prevent error setting length of NULL to 0
	* src/ctlib/unittests/t0002.c: do not try to print NULL data
	* src/dblib/dblib.c: cleanup for C++ compile
	* src/tds/login.c: small optimization
	* src/tds/query.c: add tds_quote_id
